--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ li {
   margin-top: 4%;
   width: 100%;
   padding: 10px;
-  background: #1959e3;
+  background: #5f6c88;
   border: none;
   border-radius: 20px;
   color: #e0e0ff;
